@@ -12,6 +12,7 @@
 
 ngIRCd 0.9.x
 
+  - Fixed server NOTICEs to users with "s" mode ("server messages").
   - Fixed a format string bug in "connection statistics" messages to clients.
 
 ngIRCd 0.9.1 (2005-08-03)
@@ -624,4 +625,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.276.2.8 2005/08/25 09:04:23 alex Exp $
+$Id: ChangeLog,v 1.276.2.9 2005/08/29 11:19:48 alex Exp $
